kubernetes-volumes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  homework-volumes
  namespace: homework
  labels:
    app: homework-volumes
spec:
  selector:
    matchLabels:
      app: homework-volumes
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homework-volumes
    spec:
      containers:
      - name: websrv
        image: "nginx:latest"
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi
        ports:
          - containerPort: 8000
            name:  http
        volumeMounts:
          - name: homework
            mountPath: /homework
          - name: nginxconf
            mountPath: /etc/nginx/conf.d/
          - name: conffile
            mountPath: /conf/
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","rm -f /homework/index.html"]
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3      
      volumes:
        - name: homework
          persistentVolumeClaim:
            claimName: homework-volumes
        - name: nginxconf
          configMap:
            name: nginxconf
        - name: conffile
          configMap:
            name: conffile
      restartPolicy: Always
      nodeSelector:
        homework: "true"
