kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-volumes
  namespace: homework
spec:
  selector:
    app: homework-volumes
  type: ClusterIP
  ports:
  - name: homework-volumes
    protocol: TCP
    port: 8000
    targetPort: 8000
