kubernetes-volumes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-volumes
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/index.html$ http://homework.otus/homepage permanent;
spec:
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework-volumes
            port:
              number: 8000
